codecolorer.css
/* Layout */
.codecolorer { padding: 5px; text-align: left; }
code.codecolorer { padding: 2px; }
.codecolorer-container { margin-bottom: 10px; text-align: left; }
.codecolorer, .codecolorer *, .codecolorer-container, .codecolorer-container * { font: 0.9rem/1.3rem Monaco, Lucida Console, monospace; -webkit-text-size-adjust: 100% }

.codecolorer-container table { border: 0px; margin: 0px; width: 100%; direction: ltr; }
.codecolorer-container table td { margin: 0px; padding: 0px; border: 0px; width: auto; }
.codecolorer-container table td.line-numbers { direction: ltr; line-height: 1.3rem; padding: 5px 0; text-align: right; width: 1%; vertical-align: middle; }
.codecolorer-container table td.line-numbers ol { list-style-position: inside; list-style-type: decimal; margin: 0; margin-right: -1em; padding: 0; }
.codecolorer-container table td.line-numbers li { height: 1.3rem; margin: 0; padding: 0; padding-left: 0.5em; }
.codecolorer-container table td.line-numbers li:nth-child(even) { background-color: #DDD; }

/* Layout styles */
.codecolorer-container { border: 1px solid #9F9F9F; }
.codecolorer-container table td.line-numbers { color: #888888; background-color: #EEEEEE; border-right: 1px solid #9F9F9F; }
.codecolorer-noborder, .codecolorer-noborder table td.line-numbers { border: 0px; }

/* "Slush & Poppies" color scheme (default) */
.codecolorer-container, .codecolorer { color: #000000; background-color: #F1F1F1; }
/* Comment */
.codecolorer .co0, .codecolorer .co1, .codecolorer .co2, .codecolorer .co3, .codecolorer .co4, .codecolorer .coMULTI { color: #406040; font-style: italic; }
/* Constant */
.codecolorer .nu0, .codecolorer .re3 { color: #0080A0; }
/* String */
.codecolorer .st0, .codecolorer .st_h, .codecolorer .es0, .codecolorer .es1 { color: #C03030; }
/* Entity */
.codecolorer .me1, .codecolorer .me2 { color: #0080FF; }
/* Keyword */
.codecolorer .kw1, .codecolorer .kw2, .codecolorer .sy1 { color: #2060A0; }
/* Storage */
.codecolorer .kw3, .codecolorer .kw4, .codecolorer .kw5, .codecolorer .re2 { color: #008080; }
/* Variable */
.codecolorer .re0, .codecolorer .re1 { color: #A08000; }
/* Global color */
.codecolorer .br0, .codecolorer .sy0 { color: #000000; }
/* XML tag */
.codecolorer.xml .re1, .codecolorer.xsl .re1, .codecolorer.xml .re2, .codecolorer.xsl .re2 { color: #008080; }
/* XML attribute */
.codecolorer.xml .re0 { color: #2060A0; }
/* Highlight lines */
.codecolorer .ln-xtra { background-color: #ffff66; display: block; }

/* "Twitlight" color scheme */
.twitlight, .twitlight .codecolorer { color: #F8F8F8; background-color: #141414; }
.twitlight .codecolorer .co0, .twitlight .codecolorer .co1, .twitlight .codecolorer .co2, .twitlight .codecolorer .co3, .twitlight .codecolorer .co4, .twitlight .codecolorer .coMULTI,
  code.twitlight .co0, code.twitlight .co1, code.twitlight .co2, code.twitlight .co3, code.twitlight .co4, code.twitlight .coMULTI
  { color: #5F5A60; font-style: italic; }
.twitlight .codecolorer .nu0, .twitlight .codecolorer .re3,
  code.twitlight .nu0, code.twitlight .re3
  { color: #CF6A4C; }
.twitlight .codecolorer .st0, .twitlight .codecolorer .st_h, .twitlight .codecolorer .es0, .twitlight .codecolorer .es1
  { color: #8F9D6A; }
.twitlight .codecolorer .me1, .twitlight .codecolorer .me2,
  code.twitlight .me1, code.twitlight .me2
  { color: #9B703F; }
.twitlight .codecolorer .kw1, .twitlight .codecolorer .kw2, .twitlight .codecolorer .sy1,
  code.twitlight .kw1, code.twitlight .kw2, code.twitlight .sy1
  { color: #CDA869; }
.twitlight .codecolorer .kw3, .twitlight .codecolorer .kw4, .twitlight .codecolorer .kw5, .twitlight .codecolorer .re2,
  code.twitlight .kw3, code.twitlight .kw4, code.twitlight .kw5, code.twitlight .re2
  { color: #F9EE98; }
.twitlight .codecolorer .re0, .twitlight .codecolorer .re1,
  code.twitlight .re0, code.twitlight .re1
  { color: #7587A6; }
.twitlight .codecolorer .br0, .twitlight .codecolorer .sy0,
  code.twitlight .br0, code.twitlight .sy0
  { color: #F8F8F8; }
.twitlight .codecolorer.xml .re1, .twitlight .codecolorer.xsl .re1, .twitlight .codecolorer.xml .re2, .twitlight .codecolorer.xsl .re2,
  code.twitlight.xml .re1, code.twitlight.xsl .re1, code.twitlight.xml .re2, code.twitlight.xsl .re2
  { color: #F9EE98; }
.twitlight .codecolorer.xml .re0, code.twitlight.xml .re0 { color: #CDA869; }
.twitlight .codecolorer .ln-xtra { background-color: #636338; }

/* "Dawn" color scheme */
.dawn, .dawn .codecolorer { color: #080808; background-color: #F9F9F9; }
.dawn .codecolorer .co0, .dawn .codecolorer .co1, .dawn .codecolorer .co2, .dawn .codecolorer .co3, .dawn .codecolorer .co4, .dawn .codecolorer .coMULTI,
  code.dawn .co0, code.dawn .co1, code.dawn .co2, code.dawn .co3, code.dawn .co4, code.dawn .coMULTI
  { color: #5A525F; font-style: italic; }
.dawn .codecolorer .nu0, .dawn .codecolorer .re3,
  code.dawn .nu0, code.dawn .re3
  { color: #811F24; }
.dawn .codecolorer .st0, .dawn .codecolorer .st_h, .dawn .codecolorer .es0, .dawn .codecolorer .es1,
  code.dawn .st0, code.dawn .st_h, code.dawn .es0, code.dawn .es1
  { color: #0B6125; }
.dawn .codecolorer .me1, .dawn .codecolorer .me2,
  code.dawn .me1, code.dawn .me2
  { color: #BF4F24; }
.dawn .codecolorer .kw1, .dawn .codecolorer .kw2, .dawn .codecolorer .sy1,
  code.dawn .kw1, code.dawn .kw2, code.dawn .sy1
  { color: #794938; }
.dawn .codecolorer .kw3, .dawn .codecolorer .kw4, .dawn .codecolorer .kw5, .dawn .codecolorer .re2,
  code.dawn .kw3, code.dawn .kw4, code.dawn .kw5, code.dawn .re2
  { color: #A71D5D; }
.dawn .codecolorer .re0, .dawn .codecolorer .re1,
  code.dawn .re0, code.dawn .re1
  { color: #234A97; }
.dawn .codecolorer .br0, .dawn .codecolorer .sy0,
  code.dawn .br0, code.dawn .sy0
  { color: #080808; }
.dawn .codecolorer.xml .re1, .dawn .codecolorer.xsl .re1, .dawn .codecolorer.xml .re2, .dawn .codecolorer.xsl .re2,
  code.dawn.xml .re1, code.dawn.xsl .re1, code.dawn.xml .re2, code.dawn.xsl .re2
  { color: #A71D5D; }
/* ... */

